--- a/index.html
+++ b/index.html
@@ -281,20 +281,20 @@ I am a Full-Stack Software Developer & Game Dev, proficient in Flutter, Python, 
 `,
         'projects': `
 <span class="text-accent-color font-bold">Blog App</span>
-> - <a href="https://github.com/hunnydeswal2/blog_app_clean_architecture" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - A Flutter-based blogging app with Clean Architecture and Supabase.
+> - <a href="https://github.com/atuldeswal/Blog-App-Clean-Architecture" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - A Flutter-based blogging app with Clean Architecture and Supabase.
 <br>
 <span class="text-accent-color font-bold">Polling App Backend</span>
-> - <a href="https://github.com/hunnydeswal2/polling-app-backend" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - Backend for a polling app using Node.js, Express, and MongoDB.
+> - <a href="https://github.com/atuldeswal/Polling-App-Backend-NodeJs-ExpressJs" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - Backend for a polling app using Node.js, Express, and MongoDB.
 <br>
 <span class="text-accent-color font-bold">TrackIt</span>
-> - <a href="https://github.com/hunnydeswal2/Trackit" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - E-commerce price tracker using Django and web scraping.
+> - <a href="https://github.com/atuldeswal/TrackIt" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - E-commerce price tracker using Django and web scraping.
 <br>
 <span class="text-accent-color font-bold">Heavy Driver Tracker</span>
-> - <a href="https://github.com/hunnydeswal2/Heavy_Driver_Tracker_App" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - A mobile application for real-time driver tracking and accident detection.
+> - <a href="https://github.com/atuldeswal/Heavy-Driver-Tracker" target="_blank" class="text-white underline hover:no-underline">GitHub Link</a> - A mobile application for real-time driver tracking and accident detection.
 `,
         'contact': `
-<span class="text-accent-color font-bold">GitHub:</span> <a href="https://github.com/hunnydeswal2" target="_blank" class="text-white underline hover:no-underline">https://github.com/hunnydeswal2</a>
-<span class="text-accent-color font-bold">LinkedIn:</span> <a href="https://linkedin.com/in/atuldeswal" target="_blank" class="text-white underline hover:no-underline">https://linkedin.com/in/atuldeswal</a>
+<span class="text-accent-color font-bold">GitHub:</span> <a href="https://github.com/atuldeswal" target="_blank" class="text-white underline hover:no-underline">https://github.com/hunnydeswal2</a>
+<span class="text-accent-color font-bold">LinkedIn:</span> <a href="https://www.linkedin.com/in/atul-deswal-28213a271/" target="_blank" class="text-white underline hover:no-underline">https://linkedin.com/in/atuldeswal</a>
 <span class="text-accent-color font-bold">Email:</span> <a href="mailto:HUNNYDESWAL2@GMAIL.COM" class="text-white underline hover:no-underline">HUNNYDESWAL2@GMAIL.COM</a>
 `
       };
@@ -379,3 +379,4 @@ I am a Full-Stack Software Developer & Game Dev, proficient in Flutter, Python, 
   </script>
 </body>
 </html>
+
